--- a/SolucaoCapitulo01/SolucaoCapitulo01/SolucaoCapitulo01.csproj
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/SolucaoCapitulo01.csproj
@@ -17,4 +17,8 @@
     <Folder Include="wwwroot\lib\font-awesome\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Modelo\Modelo.csproj" />
+  </ItemGroup>
+
 </Project>
