--- a/SolucaoCapitulo01/SolucaoCapitulo01/SolucaoCapitulo01.csproj
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/SolucaoCapitulo01.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Cadastros\Data\" />
+    <Folder Include="Areas\Cadastros\Models\" />
+    <Folder Include="Areas\Discente\Data\" />
+    <Folder Include="Areas\Discente\Models\" />
     <Folder Include="wwwroot\lib\font-awesome\" />
   </ItemGroup>
 
