--- a/SolucaoCapitulo01/SolucaoCapitulo01/SolucaoCapitulo01.csproj
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/SolucaoCapitulo01.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
@@ -19,6 +20,7 @@
     <Folder Include="Areas\Cadastros\Models\" />
     <Folder Include="Areas\Discente\Data\" />
     <Folder Include="Areas\Discente\Models\" />
+    <Folder Include="Areas\Docente\Data\" />
     <Folder Include="wwwroot\lib\font-awesome\" />
   </ItemGroup>
 
